@@ -1,0 +1,19 @@
+#include <stdio.h>
+#include <sys/types.h>
+
+#ifdef VK_NEED_UCHAR
+uchar uc;
+#endif
+
+#ifdef VK_NEED_USHORT
+ushort us;
+#endif
+
+#ifdef VK_NEED_ULONG
+ulong ul;
+#endif
+
+#ifdef VK_NEED_UINT
+uint ui;
+#endif
+main(){}
